--- a/css/style.css
+++ b/css/style.css
@@ -10,5 +10,8 @@ body {
 }
 
 .desc {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  width: 300px;
+  border: 15px solid green;
+  padding: 50px;
+  margin: 20px;
 }  
