--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,9 @@ body {
 
 .desc {
   width: 300px;
+  height: 200px;
   padding: 50px;
   margin: 20px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  color: white;
 }  
