--- a/css/style.css
+++ b/css/style.css
@@ -15,5 +15,5 @@ body {
   padding: 50px;
   margin: 20px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  color: white;
+  background-color: white;
 }  
