--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 /* Sets a light gray background color */
 body {
-  background-color: lightgray;
+  background-color: #E6EE9C;
   font-size: 20px;
 }
 
 /* Color for the header*/
 .headerColor {
-    color: black;
+    color: #7CB342;
 }
 
 .desc {
