--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,18 @@
 body {
   font-size: 20px;
-  background-color: #E6EE9C
+  background-color: #B2EBF2;
 }
 
 .navbar {
-  background-color: #E6EE9C;
+  background-color: #B2EBF2;
 }
 
 .headerColor {
-    background-color: #7CB342;
+    background-color: #00838F;
 }
 
 .jumbotron {
-  background-color: #E6EE9C;
+  background-color: #B2EBF2;
 }
 
 .desc {
