--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,8 @@ body {
   background-color: #B2EBF2;
 }
 
-.headerColor {
-    background-color: #00838F;
+.bg-dark {
+  background-color: #00838F;
 }
 
 .jumbotron {
